--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <title>Page Title</title>
+<link rel="stylesheet" href=style.css">
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+<canvas id="canvas1"></canvas>
+<script src="script.js"></script>
 </body>
 </html>
