--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <link rel="stylesheet" href=style.css">
 </head>
 <body>
-<canvas id="canvas1"></canvas>
+<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+</canvas>
 <script src="script.js"></script>
 </body>
 </html>
