--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <link rel="stylesheet" href=style.css">
 </head>
 <body>
+  <div class="can">
 <canvas id="myCanvas" width="200" height="100">
 </canvas>
+    </div>
 <script src="script.js"></script>
 </body>
 </html>
